WIP [WebDriver][WPE] MessageReceiverMap assertion failure for WebAutomationSessionProxy messages in debug builds https://bugs.webkit.org/show_bug.cgi?id=276266

Reviewed by NOBODY (OOPS!).

Make WebAutomationSession an identified receiver, as most of its
previous messages were sent with a target identifier.

* Source/WebKit/UIProcess/Automation/WebAutomationSession.cpp:
(WebKit::WebAutomationSession::getAllCookies):
(WebKit::WebAutomationSession::deleteSingleCookie):
* Source/WebKit/UIProcess/WebPageProxy.cpp: